--- a/awesome_events/Gemfile
+++ b/awesome_events/Gemfile
@@ -24,6 +24,7 @@ gem 'hamlit-rails'
 gem 'omniauth', '~> 1.9.1'
 gem 'omniauth-github', '~> 1.4.0'
 gem 'omniauth-rails_csrf_protection', '~> 0.1.2'
+gem 'rails-i18n'
 
 # Use Active Storage variant
 # gem 'image_processing', '~> 1.2'
