--- a/.github/workflows/awesome_events_rails_test.yml
+++ b/.github/workflows/awesome_events_rails_test.yml
@@ -1,4 +1,8 @@
-name: Rails Tests
+defaults:
+  run:
+    shell: bash
+    working-directory: scripts
+name: Awesome Events Rails Tests
 on: [push, pull_request]
 jobs:
   build:
