Fix wrong working-directory...

--- a/.github/workflows/awesome_events_rails_test.yml
+++ b/.github/workflows/awesome_events_rails_test.yml
@@ -1,6 +1,6 @@
 defaults:
   run:
-    working-directory: scripts
+    working-directory: awesome_events/
 name: Awesome Events Rails Tests
 on: [push, pull_request]
 jobs:
