--- a/devise-tutorial/Gemfile
+++ b/devise-tutorial/Gemfile
@@ -56,3 +56,7 @@ end
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 
 gem 'devise'
+
+group :development do
+  gem 'letter_opener_web'
+end
