--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -17,6 +17,8 @@ jobs:
       - name: get current date
         id: date
         run: echo "::set-output name=date::$(date +'%Y%m%d.%H%M%S')"
+        env:
+          TZ: "Asia/Tokyo"
       - uses: release-drafter/release-drafter@v5
         with:
           config-name: templates/release-drafter.yml
