--- a/auth0-on-rails/config/auth0.yml
+++ b/auth0-on-rails/config/auth0.yml
@@ -1,4 +1,4 @@
 development:
-  auth0_domain: dev-z4k69gje.us.auth0.com
-  auth0_client_id: PKGZGVTCe61JMENfBRgjLcmGRfoVksWY
+  auth0_domain: <%= ENV["AUTH0_DOMAIN"] || 'dev-z4k69gje.us.auth0.com' %>
+  auth0_client_id: <%= ENV["AUTH0_CLIENT_ID"] || 'PKGZGVTCe61JMENfBRgjLcmGRfoVksWY' %>
   auth0_client_secret: <%= ENV["AUTH0_CLIENT_SECRET"] %>
