--- a/intern_diary/Dockerfile
+++ b/intern_diary/Dockerfile
@@ -10,4 +10,8 @@ COPY Gemfile.lock /app/Gemfile.lock
 
 RUN bundle install
 
+COPY entrypoint.sh /usr/bin/
+RUN chmod +x /usr/bin/entrypoint.sh
+ENTRYPOINT ["entrypoint.sh"]
+
 ADD . /app
