--- a/intern_diary/Gemfile
+++ b/intern_diary/Gemfile
@@ -52,6 +52,7 @@ group :development do
   gem "web-console"
 
   gem 'rubocop', require: false
+  gem 'rubocop-rails', require: false
 
   # Add speed badges [https://github.com/MiniProfiler/rack-mini-profiler]
   # gem "rack-mini-profiler"
