--- a/intern_diary/Gemfile
+++ b/intern_diary/Gemfile
@@ -53,6 +53,7 @@ group :development do
 
   gem 'rubocop', require: false
   gem 'rubocop-rails', require: false
+  gem 'rubocop-rspec', require: false
 
   # Add speed badges [https://github.com/MiniProfiler/rack-mini-profiler]
   # gem "rack-mini-profiler"
