Change default DB_HOST to 127.0.0.1 to make it work with docker-compose

--- a/intern_diary/config/database.yml
+++ b/intern_diary/config/database.yml
@@ -5,7 +5,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: <%= ENV.fetch("DB_USERNAME") { 'root' } %>
   password: <%= ENV.fetch("DB_PASSWORD") { 'password' } %>
-  host: <%= ENV.fetch("DB_HOST") { 'localhost' } %>
+  host: <%= ENV.fetch("DB_HOST") { '127.0.0.1' } %>
 
 development:
   <<: *default
