--- a/intern_diary/docker-compose.yml
+++ b/intern_diary/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       MYSQL_ROOT_PASSWORD: password
     volumes:
       - db-data:/var/lib/mysql
+    ports:
+      - "3306:3306"
   web:
     build: .
     command: bin/rails s -p 3000 -b '0.0.0.0'
