Disable Style/ClassAndModuleChildren within app/controllers/

--- a/intern_diary/.rubocop.yml
+++ b/intern_diary/.rubocop.yml
@@ -26,3 +26,8 @@ Metrics/AbcSize:
 
 RSpec/NestedGroups:
   Max: 4
+
+Style/ClassAndModuleChildren:
+  Exclude:
+    - "app/controllers/**/*"
+    - "app/helpers/**/*"
