Launch tailwind on a separated container with app

--- a/intern_diary/docker-compose.yml
+++ b/intern_diary/docker-compose.yml
@@ -21,5 +21,11 @@ services:
       DB_HOST: db
     depends_on:
       - db
+  tailwind:
+    build: .
+    command: bin/rails tailwindcss:watch
+    tty: true
+    volumes:
+      - .:/app
 volumes:
   db-data:
