Max of MultipleMemoizedHelpers is too low

--- a/intern_diary/.rubocop.yml
+++ b/intern_diary/.rubocop.yml
@@ -31,3 +31,6 @@ Style/ClassAndModuleChildren:
   Exclude:
     - "app/controllers/**/*"
     - "app/helpers/**/*"
+
+RSpec/MultipleMemoizedHelpers:
+  Max: 10
